# vision-review

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_claude.py
app/: webhook_handler.py
prompts/: code_review.py
prompts/guidelines/: Android.md  Common.md  README.md  housing.brahmand.md  housing.seller.md  housing.seo.md  iOS.md  khoj.md
services/: claude_service.py  github_service.py  sheets_service.py
utils/: file_filter.py
